--- a/views/tranForm.ejs
+++ b/views/tranForm.ejs
@@ -434,7 +434,7 @@
             return 0;
           }
           setZero();
-          loadJobs();
+          // loadJobs();
           getDate();
           let selectedMonth = document.getElementById('month-select').value;
           let YEAR = $('#txt-year').val();
