--- a/views/navigator/navigator.ejs
+++ b/views/navigator/navigator.ejs
@@ -6,6 +6,7 @@
         <!--<li class="nav"><a href="/transaction/update">Transaction</a></li>-->
         <li class="nav"><a href="/amc/list">AMC List</a></li>
         <li class="nav"><a href="/amc/update">Selling Fee</a></li>
+        <li class="nav"><a href="/target/">Target RM</a></li>
         <li class="nav"><a href="/trailingFee/wcctrailing">Trailing Fee</a></li>
         <li class="nav"><a href="/transaction/update">Transaction Update</a></li>
         <li class="nav"><a href="/users/monthly">RM Performance</a></li>
