--- a/views/navigator/navigator.ejs
+++ b/views/navigator/navigator.ejs
@@ -1,16 +1,16 @@
 <div >
     <ul class="nav">
         <li class="nav"><a href="/transactions/list">Home</a></li>
-        <li class="nav"><a href="/announcement">ประกาศบริษัท</a></li>
+        <!-- <li class="nav"><a href="/announcement">ประกาศบริษัท</a></li> -->
         <li class="nav"><a href="/transactions/list">Datas</a></li>
         <!--<li class="nav"><a href="/transaction/update">Transaction</a></li>-->
         <li class="nav"><a href="/amc/list">AMC List</a></li>
-        <li class="nav"><a href="/amc/update">Selling Fee</a></li>
+        <!-- <li class="nav"><a href="/amc/updateNew">AMC Update</a></li> -->
         <li class="nav"><a href="/target/">Target RM</a></li>
         <li class="nav"><a href="/trailingFee/wcctrailing">Trailing Fee</a></li>
         <li class="nav"><a href="/transaction/update">Transaction Update</a></li>
         <li class="nav"><a href="/users/monthly">RM Performance</a></li>
-        <li class="nav"><a href="/transactions/allotment">Allotment Date</a></li>
+        <!-- <li class="nav"><a href="/transactions/allotment">Allotment Date</a></li> -->
         <li class="nav"><a href="/aum/.">AUM</a></li>
         <li class="nav"><a href="/job/report/">RM Action Plan report</a></li>
         <li class="nav"><a href="/">Log Out</a></li>
