--- a/views/amc/amcList.ejs
+++ b/views/amc/amcList.ejs
@@ -261,6 +261,7 @@
                                 console.log(data);
                                 console.log(fund_id);
                                 $("#add-form").dialog("close");
+                                location.reload();
                                 return true;
                             }).catch(function(error){
                                 console.error(error);
